- iOS 9 overflow hidden fix

--- a/website/src/resources/css/style-reset.css
+++ b/website/src/resources/css/style-reset.css
@@ -27,6 +27,11 @@ time, mark, audio, video {
     background:transparent;
 }
 
+html, body {
+    position: relative;
+    height: 100%;
+}
+
 body {
     line-height:1;
 }
